[gd_scene load_steps=24 format=3 uid="uid://c17mkmrioiovk"]

[ext_resource type="Script" uid="uid://cur3f6b5sogha" path="res://code stuff/Main/main_menu.gd" id="1_aer7q"]
[ext_resource type="Texture2D" uid="uid://cpd4644xejb2k" path="res://UI STUFF/Main menu/Backround.png" id="2_aer7q"]
[ext_resource type="Texture2D" uid="uid://udpm7r51g8lb" path="res://UI STUFF/Main menu/Backround overlay.png" id="3_f51au"]
[ext_resource type="Shader" uid="uid://dikse5fp3siql" path="res://Other/underwater.gdshader" id="3_gq3e0"]
[ext_resource type="Shader" uid="uid://cc04vm8gfnb87" path="res://Other/fishy.gdshader" id="3_wbnml"]
[ext_resource type="FontFile" uid="uid://bm5o7wdxohasl" path="res://Other/Tiny5-Regular.ttf" id="3_x5du3"]
[ext_resource type="Texture2D" uid="uid://sxvw6qsce7ox" path="res://UI STUFF/Main menu/Bob fish.png" id="4_7vcng"]
[ext_resource type="Texture2D" uid="uid://cvkkpe6svwn50" path="res://UI STUFF/Main menu/Wood fish.png" id="5_f6cs1"]
[ext_resource type="Texture2D" uid="uid://cpem6inpltum2" path="res://UI STUFF/Main menu/Crab fish.png" id="5_hqu71"]
[ext_resource type="Texture2D" uid="uid://dkenng8wrdhgi" path="res://UI STUFF/Main menu/Dave fish.png" id="7_t6xi3"]
[ext_resource type="Texture2D" uid="uid://giq51g5emuq8" path="res://UI STUFF/Main menu/Glunko fish.png" id="8_dw78y"]
[ext_resource type="Texture2D" uid="uid://2eblswuq8qb1" path="res://UI STUFF/Main menu/Horse fish.png" id="9_it6q7"]
[ext_resource type="Texture2D" uid="uid://1sc33c2hknvd" path="res://UI STUFF/Main menu/Kelp ish.png" id="10_x0tsb"]
[ext_resource type="Texture2D" uid="uid://b34jhrel6324n" path="res://UI STUFF/Main menu/Mine fish.png" id="11_8t45d"]
[ext_resource type="Texture2D" uid="uid://biv46jc8ybcq" path="res://UI STUFF/Main menu/Shrimp fish.png" id="12_6o122"]
[ext_resource type="Texture2D" uid="uid://ds8kdkvph37kk" path="res://UI STUFF/Main menu/Squid fish.png" id="13_1hio7"]
[ext_resource type="Texture2D" uid="uid://gqxxgwwcbi57" path="res://UI STUFF/Settings_button_frame004.png" id="17_t6xi3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ip0w4"]
shader = ExtResource("3_wbnml")
shader_parameter/fish_texture_1 = ExtResource("4_7vcng")
shader_parameter/fish_texture_2 = ExtResource("5_hqu71")
shader_parameter/fish_texture_3 = ExtResource("7_t6xi3")
shader_parameter/fish_texture_4 = ExtResource("8_dw78y")
shader_parameter/fish_texture_5 = ExtResource("9_it6q7")
shader_parameter/fish_texture_6 = ExtResource("10_x0tsb")
shader_parameter/fish_texture_7 = ExtResource("11_8t45d")
shader_parameter/fish_texture_8 = ExtResource("12_6o122")
shader_parameter/fish_texture_9 = ExtResource("13_1hio7")
shader_parameter/fish_texture_10 = ExtResource("5_f6cs1")
shader_parameter/min_speed = 0.2
shader_parameter/max_speed = 2.0
shader_parameter/fish_scale = 10.0
shader_parameter/spawn_delay = 0.8
shader_parameter/flip_fish_1 = false
shader_parameter/flip_fish_2 = true
shader_parameter/flip_fish_3 = false
shader_parameter/flip_fish_4 = false
shader_parameter/flip_fish_5 = false
shader_parameter/flip_fish_6 = false
shader_parameter/flip_fish_7 = true
shader_parameter/flip_fish_8 = false
shader_parameter/flip_fish_9 = true
shader_parameter/flip_fish_10 = true
shader_parameter/background_color = Color(0.101961, 0.301961, 0.501961, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x5du3"]
shader = ExtResource("3_gq3e0")
shader_parameter/wave_amplitude = 0.005
shader_parameter/wave_frequency = 20.0
shader_parameter/wave_speed = 1.0
shader_parameter/tint_color = Color(0, 0.282353, 0.72549, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f6cs1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t6xi3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dw78y"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_it6q7"]
texture = ExtResource("17_t6xi3")

[node name="Main menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aer7q")

[node name="Backround" type="Sprite2D" parent="."]
position = Vector2(640, 365)
scale = Vector2(10, 10)
texture = ExtResource("2_aer7q")

[node name="fish" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ip0w4")
layout_mode = 0
offset_left = 311.0
offset_top = 9.0
offset_right = 406.0
offset_bottom = 69.0
scale = Vector2(10, 10)
mouse_filter = 2

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 315.0
offset_top = 238.0
offset_right = 435.0
offset_bottom = 256.0
scale = Vector2(8, 8)
theme_override_colors/font_color = Color(0.921569, 0.996078, 1, 1)
theme_override_fonts/font = ExtResource("3_x5du3")
theme_override_font_sizes/font_size = 16
text = "FISHY-FISHY "
horizontal_alignment = 1
vertical_alignment = 1

[node name="wave" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_x5du3")
layout_mode = 0
offset_left = 4.0
offset_top = 1.0
offset_right = 132.0
offset_bottom = 60.0
scale = Vector2(10, 12.52)
mouse_filter = 2

[node name="BackroundOverlay" type="Sprite2D" parent="."]
position = Vector2(640, 365)
scale = Vector2(10, 10)
texture = ExtResource("3_f51au")

[node name="Play" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 48.0
offset_right = 320.0
offset_bottom = 200.0
theme_override_colors/font_hover_pressed_color = Color(0.819608, 0.992157, 1, 1)
theme_override_colors/font_hover_color = Color(0.819751, 0.990403, 1, 1)
theme_override_colors/font_color = Color(0.921569, 0.996078, 1, 1)
theme_override_colors/font_pressed_color = Color(0.819608, 0.992157, 1, 1)
theme_override_fonts/font = ExtResource("3_x5du3")
theme_override_font_sizes/font_size = 128
theme_override_styles/focus = SubResource("StyleBoxEmpty_f6cs1")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_f6cs1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_f6cs1")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_f6cs1")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_f6cs1")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_f6cs1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_f6cs1")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_f6cs1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_f6cs1")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_f6cs1")
theme_override_styles/normal = SubResource("StyleBoxEmpty_f6cs1")
text = "PLAY"

[node name="Tutorial" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 358.0
offset_right = 304.0
offset_bottom = 430.0
theme_override_colors/font_hover_pressed_color = Color(0.819608, 0.992157, 1, 1)
theme_override_colors/font_hover_color = Color(0.819751, 0.990403, 1, 1)
theme_override_colors/font_color = Color(0.921569, 0.996078, 1, 1)
theme_override_colors/font_pressed_color = Color(0.819608, 0.992157, 1, 1)
theme_override_fonts/font = ExtResource("3_x5du3")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_f6cs1")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_f6cs1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_f6cs1")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_f6cs1")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_f6cs1")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_f6cs1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_f6cs1")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_f6cs1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_f6cs1")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_f6cs1")
theme_override_styles/normal = SubResource("StyleBoxEmpty_f6cs1")
text = "TUTORIAL"

[node name="Api" type="Button" parent="."]
layout_mode = 0
offset_left = 1061.0
offset_top = 620.0
offset_right = 1261.0
offset_bottom = 692.0
theme_override_colors/font_hover_pressed_color = Color(0.819608, 0.992157, 1, 1)
theme_override_colors/font_hover_color = Color(0.819608, 0.992157, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.819608, 0.992157, 1, 1)
theme_override_fonts/font = ExtResource("3_x5du3")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_t6xi3")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_t6xi3")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_t6xi3")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_t6xi3")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_t6xi3")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_t6xi3")
theme_override_styles/hover = SubResource("StyleBoxEmpty_t6xi3")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_t6xi3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_t6xi3")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_t6xi3")
theme_override_styles/normal = SubResource("StyleBoxEmpty_t6xi3")
text = "Api key"

[node name="settings" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -337.5
offset_right = -120.0
offset_bottom = -328.5
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(6, 6)
theme_override_styles/focus = SubResource("StyleBoxEmpty_dw78y")
theme_override_styles/hover = SubResource("StyleBoxTexture_it6q7")
theme_override_styles/pressed = SubResource("StyleBoxTexture_it6q7")
theme_override_styles/normal = SubResource("StyleBoxTexture_it6q7")

[node name="ApiKeyFileDialog" type="FileDialog" parent="."]
mode = 3
title = "Open a File"
position = Vector2i(0, 25)
size = Vector2i(900, 700)
theme_override_colors/folder_icon_color = Color(0.12549, 0.572549, 0.682353, 1)
theme_override_colors/file_icon_color = Color(0.12549, 0.572549, 0.682353, 1)
ok_button_text = "Open"
file_mode = 0

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="Api" to="." method="_on_api_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="file_selected" from="ApiKeyFileDialog" to="." method="_on_file_selected"]
